# StreamSync

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  StreamSync.spec  TwitchClient.py  app.py  docker-compose.yml  install-twitchsync-linux.sh  launch-virtual.sh  main.py  pyproject.toml  requirements.txt  start-web.bat  streamsync.py  streamsync.spec
StreamSync/: StreamsyncConfig.py  TwitchClient.py  __init__.py  streamsync.py
src/: app.py
src/static/: style.css
src/twitchsync/: StreamsyncConfig.py  TwitchSync.py  __init__.py  __main__.py
streamsync/: StreamsyncConfig.py  __main__.py
templates/: base.html  search.html
